[package]

name = "cubeland"
version = "0.0.0"
authors = [
    "Rich Lane <https://github.com/rlane/>",
  ]

[[bin]]

name = "cubeland"
path = "./src/cubeland/main.rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.noise-rs]
git = "https://github.com/bjz/noise-rs"

[dependencies.hgl]
git = "https://github.com/cmr/hgl-rs"
